    - Fixed Tiberium Centrifuges glowing when they weren't active
    - Fixed Tiberium not spawning on Nauvis with certain setting combinations when Omnimatter is active (bug introduced in 2.0.9)
    - Fixed crash when using Burner Centrifuge setting with Nauvis has Tiberium setting
---------------------------------------------------------------------------------------------------
Version: 2.0.10
  Bugfixes:
    - Fixed startup crash when Space Age is not active
---------------------------------------------------------------------------------------------------
Version: 2.0.9
  Bugfixes:
    - Fixed missing events for structures built on space platforms
    - Fixed Tiberium having lossless recycling recipes
    - Fixed "Found power pole" messages to no longer appear when debug mode is turned off
    - Fixed Tiberium not spawning after being added to an in-progress save (Thanks to Brevven and Xorimuth)
    - Fixed recipes to stop autogenerating for unharvestable dummy resources from other mods
    - Fixed crash from modded ores that gave science packs when mined instead of items
    - Fixed SRF Emitters sometimes not connecting to nearby power poles
    - Fixed SRF Emitters rarely being unpowered but not displaying the low power icon
    - Fixed Tiber Rocks spawning on Nauvis when they shouldn't
    - Fixed a few typos
  Changes:
    - Split the "Tiberium on All Planets" setting up into per-planet settings to make it less confusing and easier to add to existing saves
    - Made the "Require Resource Seed for Transmutation" setting not apply to fluids to avoid soft-locking some settings combinations
    - Split Rocks and Tiber Rocks to be separate settings on the Terrain tab
    - Moved Tiberium Artillery to a separate technology to reduce prerequisites for Tiberium Military 3
    - Changed ammo and rocket stack sizes from 200 to 100
    - Changed fuel cell stack sizes from 50, 100, 5 to 50, 50, 50
    - Changed Monoculture stack sizes from 20, 50 to 20, 20