@@ -289,6 +289,7 @@ tiberium-debug-text-startup=Debug Mode Startup Logging
 # __1__ is replaced with a centrifuging noun phrase from [technology-name]
 tiberium-centrifuge-override=Override __1__ Outputs
 tiberium-centrifuge-alien-ores=Include Non-Nauvis Ores in Centrifuging
+tiberium-resource-inclusions=Include Specific Resources
 tiberium-resource-exclusions=Exclude Specific Resources
 tiberium-tier-zero=Add Burner Tier to Centrifuging
 tiberium-advanced-start=Tiberium Advanced Start
@@ -322,6 +323,7 @@ tiberium-debug-text-startup=Logs additional information to factorio-current.log 
 # __1__ is replaced with a centrifuging noun phrase from [technology-name]
 tiberium-centrifuge-override=Advanced setting: replace the automatically generated __1__ recipe output with something you feel is more appropriate for your mod combination.\nEnter a delimited string of the items/fluids and amounts that should come from the recipe in the exact format "item1-internal-name:item1-amount,item2-internal-name:item2-amount" e.g. iron-ore:13,crude-oil:32\nYou can find items' internal names by loading into a game, pressing F4 to open debug settings, enabling "show-debug-info-in-tooltips", and then mousing over the desired item and noting the "item-name" field. For fluids, mouse over them in FNEI or the un-barreling recipes.\nDefault: leave blank to use the automatically generated __1__ recipe output
 tiberium-centrifuge-alien-ores=Whether to include ores and recipes from planets other than Nauvis in centrifuging recipe generation. Can result in warped or progression-breaking recipes.\nDefault: disabled
+tiberium-resource-inclusions=Advanced setting: list any items/fluids to be considered resources that should be given by tiberium centrifuging or transmutation recipes.\nEnter a delimited string of the items/fluids in the exact format "item1-internal-name,item2-internal-name" e.g. uranium-ore,crude-oil\nYou can find items' internal names by loading into a game, pressing F4 to open debug settings, enabling "show-debug-info-in-tooltips", and then mousing over the desired item and noting the "item-name" field. For fluids, mouse over them in FNEI or the un-barreling recipes.\nDefault: leave blank to only allow centrifuging and transmuting drillable/pumpjackable resources
 tiberium-resource-exclusions=Advanced setting: list resources that should never be given by tiberium centrifuging or transmutation recipes.\nEnter a delimited string of the items/fluids in the exact format "item1-internal-name,item2-internal-name" e.g. uranium-ore,crude-oil\nYou can find items' internal names by loading into a game, pressing F4 to open debug settings, enabling "show-debug-info-in-tooltips", and then mousing over the desired item and noting the "item-name" field. For fluids, mouse over them in FNEI or the un-barreling recipes.\nDefault: leave blank to allow centrifuging and transmuting all resources
 tiberium-value=Scales how much raw material you get from a single piece of Tiberium ore. Higher values make the game easier.\nDefault: 10
 tiberium-enemies-take-environmental-damage=Will cause biters to take damage from walking near Tiberium Blossom Trees. Has historically caused UPS issues.\nDefault: disabled
